[package]
name = "swap-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-types = "1.1.2"
ckb-jsonrpc-types = "1.1.2"
molecule = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
blake2b_simd = "1"
ureq = "2.9"
k256 = { version = "0.13", features = ["ecdsa", "keccak256"] }
sha2 = "0.10"
